--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html,body{
 }
 
 .navbar{
+    position: relative;
     height: 90px;
     width: 100%;
     display: flex;
@@ -49,7 +50,7 @@ html,body{
 
 .page1{
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     background-color: #dbdad7;
     display: flex;
@@ -109,7 +110,7 @@ html,body{
     display: flex;
     padding: 20px 40px;
     width: 100%;
-    height: 18vh;
+    min-height: 18vh;
     justify-content: space-around;
     background-color: #111111;
     align-items: center;
@@ -141,7 +142,7 @@ html,body{
 
 .page2{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .top{
@@ -193,13 +194,13 @@ html,body{
 }
 
 .page3{
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     background-color: #dbdad777;
 }
 
 .page4{
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     background-color: #fffdf8;
 }
@@ -227,8 +228,15 @@ html,body{
     color: #111111;
 }
 
+.hello{
+    position: absolute;
+    right: 50px;
+    display: none;
+}
+
 .mid{
     text-align: center;
+    box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.199);
     width: 25%;
     margin: 0 -300px;
     height: 78%;
@@ -280,4 +288,144 @@ html,body{
     color: #11111170;
     font-size: 1.2rem;
     border-top: 1px solid rgba(0, 0, 0, 0.596);
+}
+
+.page1 .left img{
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (max-width:990px) {
+    .page1 .right{
+        font-size: 1.5rem;
+    }
+
+    .page1 .right h3{
+        font-size: 1.2rem;
+    }
+
+    .page1 .right p{
+        font-size: 0.9rem;
+    }
+
+    .prices{
+        padding: 10px 20px;
+    }
+
+    .cards{
+        padding: 15px 25px;
+    }
+
+    .cards h2{
+        font-size: 1rem;
+    }
+
+    .images{
+        flex-wrap: wrap;
+        min-height: 50vh;
+        gap: 10px;
+    }
+
+    .imagecards{
+        width: 40%;
+        margin-left: 15px;
+    }
+
+    .imagecards img{
+        height: 80%;
+        width: 100%;
+    }
+    
+    .images .imagecards:last-child{
+        margin-right: 0;
+    }
+
+    .reviews{
+        display: flex;
+        /* flex-direction: column; */
+        font-size: smaller;
+    }
+
+    .mid{
+        margin: 0;
+    }
+}
+
+@media screen and (max-width:750px) {
+      .page1 .right{
+        font-size: 1.2rem;
+    }
+
+    .page1 .right h3{
+        font-size: 0.9rem;
+    }
+
+    .page1 .right p{
+        font-size: 0.7rem;
+    }
+
+    .prices{
+          flex-wrap: nowrap;
+    }
+
+    .cards{
+        padding: 5px 15px;
+    }
+
+    .cards h2{
+        margin-left: 0;
+        font-size: 0.7rem;
+    }
+
+    .cards i{
+    margin-left: 10px;
+    }
+    
+    .reviews{
+        font-size: 0.7rem;
+    }
+   
+}
+
+@media screen and (max-width:650px){
+    .navbar .left{
+        display: none;
+    }
+    .hello{
+        display: block;
+    }
+
+    .bgi{
+        display: none;
+    }
+    .page1{
+        display: block;
+        text-align: center;
+    }
+
+    .prices{
+        display: none;
+    }
+
+    .reviews{
+        flex-direction: column;
+    }
+    .reviewCard{
+        height: 150px;
+        width: 200px;
+        margin-bottom: 30px;
+        margin-top: 0;
+    }
+    .mid{
+        min-height: 150px;
+        width: 250px;
+        margin-bottom: 30px;
+    }
+
+}
+
+@media screen and (max-width:500px) {
+    .navbar .right li{
+        display: none;
+    }
 }
