--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html,body{
     width: 100%;
     box-sizing: border-box;
     overflow-x: hidden;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .navbar{
@@ -37,6 +38,12 @@ html,body{
     height: 80%;
     width: 80%;
 }
+
+#check{
+    display: none;
+}
+
+
 
 .navbar .left{
     display: flex;
@@ -228,6 +235,10 @@ html,body{
     color: #111111;
 }
 
+.hoverable{
+    height: 0;
+}
+
 .hello{
     position: absolute;
     right: 50px;
@@ -264,22 +275,55 @@ html,body{
     width: 100%;
     display: flex;
     justify-content: space-evenly;
+    color: white;
 }
 
 .div1{
-    width: 30%;
-    background-color: aliceblue;
+    width: 45%;
+    padding-right: 12%;
+    padding-left: 5%;
+    margin-top: 4%;
+}
+
+.div1 p{
+    margin-top: 14%;
+    font-size: 120%;
+    color: rgba(255, 255, 255, 0.644);
 }
 
 .div2{
-    width: 30%;
-    background-color: rgb(21, 112, 192);
+    margin-top: 3%;
+    width: 25%;
     list-style-type: none;
+    margin-left: -10%;
 }
 
+.div2 h3{
+    margin-top: 23%;
+    font-size: 200%;
+    margin-bottom: 10%;
+}
+
+.div2 .fr{
+    font-size: 140%;
+    margin-bottom: 8%;
+}
+
+.div2 h4{
+    font-size: 200%;
+    margin-bottom: 5%;
+}
+
+.div2 .tw{
+    font-size: 120%;
+    margin-bottom: 8%;
+}
+
+
 .div3{
-    width: 30%;
-    background-color: rgb(180, 152, 28);
+    margin-top: 4%;
+    width: 25%;
+    margin-left: -10%;
 }
 
 .ftr{
@@ -293,6 +337,24 @@ html,body{
 .page1 .left img{
     width: 100%;
     height: 100%;
+}
+
+.div3 h3{
+    font-size: 200%;
+    margin-top: 16%;
+    margin-bottom: 14%;
+}
+
+.div3 p{
+    font-size: 140%;
+    color: rgba(255, 255, 255, 0.514);
+}
+
+
+#check:checked~.hoverable{
+    display: block;
+    height: 170px;
+    padding-bottom: 30px;
 }
 
 @media screen and (max-width:990px) {
@@ -339,6 +401,7 @@ html,body{
     .images .imagecards:last-child{
         margin-right: 0;
     }
+
 
     .reviews{
         display: flex;
@@ -391,6 +454,21 @@ html,body{
     .navbar .left{
         display: none;
     }
+    
+    .hoverable{
+        height: 0;
+        background-color: #DBDAD7;
+        text-align: center;
+        list-style-type: none;
+        padding-bottom: 0;
+        transition: all ease 1s;
+    }
+
+    .hoverable li{
+        padding: 4px 0px;
+    }
+
+
     .hello{
         display: block;
     }
